# libhdnnipc

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  bootstrap.sh  configure.ac  hdnnipc.h  hdnnipc_Base.c  hdnnipc_Base.h  hdnnipc_Client.c  hdnnipc_Client.h  hdnnipc_Server.c  hdnnipc_Server.h
