dnl Process this file with autoconf to produce a configure script. -*- m4 -*-
dnl
dnl $Id$
dnl

dnl Init autoconf
AC_REVISION([$Id$])
AC_INIT(libhdnnipc, 0.1.0)

dnl Initialize automake
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)

dnl Initialize libtool
AC_PROG_LIBTOOL




dnl Initialize maintainer mode
AM_MAINTAINER_MODE



dnl Guess the OS
AC_CANONICAL_HOST




dnl Checks for programs.




dnl Checks for libraries.




dnl Checks for header files.
AC_HEADER_STDC
AC_HAVE_HEADERS(unistd.h stdio.h stdlib.h assert.h string.h)




dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST



dnl Generate output files
AC_OUTPUT(Makefile)
